<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/curved_diag"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/gameres2"
        android:rotation="180"
        android:textSize="20sp"
        android:textColor="@color/textColor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/game_over_tv"
        android:textSize="20sp"
        android:rotation="180"
        android:layout_margin="10dp"
        android:textColor="@color/textColor"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/game_over_tv"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textColor="@color/textColor"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/gameres1"
        android:textSize="20sp"
        android:textColor="@color/textColor"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game_btn"
            android:id="@+id/new_game_btn_2"
            android:layout_margin="5dp"
            android:background="@drawable/button_shape"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_game_btn"
            android:id="@+id/exit_game_btn_2"
            android:layout_margin="5dp"
            android:background="@drawable/button_shape"/>

    </LinearLayout>

</LinearLayout>